--- a/config/database.yml
+++ b/config/database.yml
@@ -1,50 +1,23 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
+development:
   adapter: mysql
   pool: 5
-  timeout: 5000
-
-development:
-  <<: *default
-  database: db/development.mysql
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.mysql
-
-production:
-  <<: *default
-  database: db/production.mysql
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: mysql
-  pool: 5
-  timeout: 5000
-
-development:
-  <<: *default
+  timeout: 5000t
   database: db/development_new.mysql
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  adapter: mysql
+  pool: 5
+  timeout: 5000
   database: db/test_new.mysql
 
 production:
-  <<: *default
-  database: db/production_new.mysql
+  adapter: postgresql
+  host: localhost
+  encoding: unicode
+  database: my_production_database
+  pool: 5
+  username:
+  password:
